# tts-sft

./: .gitignore  GPU_RUNBOOK.md  GPU_RUNBOOK_LLAMAFATORY.md  HANDOFF.md  Makefile  README.md  claim-ledger.md  pyproject.toml  requirements.txt
configs/: budget_check_loops1.yaml  budget_check_loops2.yaml  budget_check_loops3.yaml  eval.yaml  model_qwen3_4b_thinking.yaml  raw_generation.yaml  sft_qwen3_4b_lora_quick.yaml  sft_qwen3_4b_lora_smoke.yaml  sft_qwen3_4b_paper_aligned.yaml  sft_raw_lora.yaml  sft_squeeze_lora.yaml  squeeze_evolve_context_preflight_loop0_hard11.yaml  squeeze_evolve_feedback_c2_node1.yaml  squeeze_evolve_feedback_vfonly_pilot_node1.yaml  squeeze_evolve_feedback_vfonly_pyramid_node3.yaml  squeeze_evolve_feedback_vfonly_pyramid_node3_smoke.yaml  squeeze_evolve_feedback_vfonly_smoke.yaml  squeeze_evolve_feedback_vfonly_strip_node3.yaml  squeeze_evolve_generation.yaml  squeeze_evolve_loop2_aime25_hardtail7.yaml  squeeze_evolve_loop2_hmmt25_reachability13.yaml  squeeze_evolve_loop2_reachability_pilot.yaml  squeeze_evolve_loop2_smoke.yaml  squeeze_evolve_loop3_reachability20.yaml  squeeze_evolve_loop4_unsolved10.yaml  squeeze_evolve_loop5_32k_temp1_aime_non_saturated.yaml  squeeze_evolve_loop5_32k_temp1_hmmt_non_saturated.yaml  squeeze_evolve_loop5_32k_temp1_lcbv6_non_saturated.yaml  squeeze_evolve_loop5_32k_temp1_strip_aime_non_saturated.yaml  squeeze_evolve_loop5_32k_temp1_strip_hmmt_non_saturated.yaml  squeeze_evolve_loop5_32k_temp1_strip_lcbv6_non_saturated.yaml  squeeze_evolve_loop5_unsolved10.yaml  squeeze_evolve_m5fb_aime_node2.yaml  (+16 more)
(+166 files in other folders)
